@@ -15,3 +15,4 @@ glob:Test\MSI\setup.exe
 re:/bin/Debug/
 re:/bin/Release/
 re:\.snk$
+re:\.nupkg$
