@@ -1,0 +1,17 @@
+<#
+.SYNOPSIS
+Chocolately install script for Carbon.
+#>
+[CmdletBinding()]
+param(
+)
+
+#Requires -Version 4
+Set-StrictMode -Version 'Latest'
+$ErrorActionPreference = 'Stop'
+
+$env:PSModulePath -split ';' |
+    Join-Path -ChildPath 'Carbon' |
+    Where-Object { Test-Path -Path $_ -PathType Container } |
+    Rename-Item -NewName { 'Carbon{0}' -f [IO.Path]::GetRandomFileName() } -PassThru |
+    Remove-Item -Recurse -Force
